tests/integration/snapshots/main__integration__subcommand__wrong_argument_style_for_nested_subcommand.snap
---
source: tests/integration/subcommand.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unknown flag: --action
   ╭─[ <cli>:1:4 ]
   │
 1 │ ci --action gen
   │    ────┬───  
   │        ╰───── unknown flag: --action
───╯
Error: unexpected argument: gen
   ╭─[ <cli>:1:13 ]
   │
 1 │ ci --action gen
   │             ─┬─  
   │              ╰─── unexpected argument: gen
───╯
